JavaDetector: use Path instead of File in SdkMan-related detector
(cherry picked from commit 7aa374758501c423a1e70d89059349ad899b2c61)

GitOrigin-RevId: 26f5f534da3b750f629584a36dc3042d572cc1e7